add item and service interface

--- a/LatihanASP/LatihanASP/LatihanASP.csproj
+++ b/LatihanASP/LatihanASP/LatihanASP.csproj
@@ -206,12 +206,15 @@
     <Compile Include="ViewModels\CategoryViewModel.cs" />
     <Compile Include="ViewModels\OrderCustom1ViewModel.cs" />
     <Compile Include="ViewModels\OrderCustomViewModel.cs" />
-    <Compile Include="ViewModels\ProductCustom\FoodsAndBeverageItemsViewModel.cs" />
+    <Compile Include="ViewModels\ProductCustom\Items\FoodsAndBeverageItemsViewModel.cs" />
     <Compile Include="ViewModels\ProductCustom\CostCalculationViewModel.cs" />
-    <Compile Include="ViewModels\ProductCustom\GarmentItemsViewModel.cs" />
-    <Compile Include="ViewModels\ProductCustom\MaterialItemsViewModel.cs" />
+    <Compile Include="ViewModels\ProductCustom\Items\GarmentItemsViewModel.cs" />
+    <Compile Include="ViewModels\ProductCustom\Items\IProductService.cs" />
+    <Compile Include="ViewModels\ProductCustom\Items\MaterialItemsViewModel.cs" />
     <Compile Include="ViewModels\ProductCustom\ProductCustomViewModel.cs" />
-    <Compile Include="ViewModels\ProductCustom\TransportationServicesViewModel.cs" />
+    <Compile Include="ViewModels\ProductCustom\Services\IProductService.cs" />
+    <Compile Include="ViewModels\ProductCustom\Services\TelecomunicationServiceViewModel.cs" />
+    <Compile Include="ViewModels\ProductCustom\Services\TransportationServicesViewModel.cs" />
     <Compile Include="ViewModels\RegionDetailViewModel.cs" />
     <Compile Include="ViewModels\RegionViewModel.cs" />
     <Compile Include="ViewModels\SupplierViewModel.cs" />
