--- a/LatihanASP/LatihanASP/LatihanASP.csproj
+++ b/LatihanASP/LatihanASP/LatihanASP.csproj
@@ -172,6 +172,20 @@
     <Compile Include="Controllers\ProductsController.cs" />
     <Compile Include="Controllers\RegionController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
+    <Compile Include="Domain\Calculation\ProductCalculator.cs" />
+    <Compile Include="Domain\instantiationProductDetail.cs" />
+    <Compile Include="Domain\Models\ProductDetails\IProductDetail.cs" />
+    <Compile Include="Domain\Models\ProductDetails\IProductDetailCalculator.cs" />
+    <Compile Include="Domain\Models\ProductDetails\Items\Details\FoodAndBeverage.cs" />
+    <Compile Include="Domain\Models\ProductDetails\Items\Details\Garment.cs" />
+    <Compile Include="Domain\Models\ProductDetails\Items\Details\Material.cs" />
+    <Compile Include="Domain\Models\ProductDetails\Items\Item.cs" />
+    <Compile Include="Domain\Models\ProductDetails\ProductDetail.cs" />
+    <Compile Include="Domain\Models\ProductDetails\Services\Details\Telecommunication.cs" />
+    <Compile Include="Domain\Models\ProductDetails\Services\Details\Transportation.cs" />
+    <Compile Include="Domain\Models\ProductDetails\Services\Service.cs" />
+    <Compile Include="Domain\Validator\ProductValidator.cs" />
+    <Compile Include="Domain\ViewModels\ProductDetailCalculatorParameter.cs" />
     <Compile Include="EntityFramworks\Alphabetical_list_of_product.cs" />
     <Compile Include="EntityFramworks\Category.cs" />
     <Compile Include="EntityFramworks\Category_Sales_for_1997.cs" />
@@ -273,7 +287,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
